# DineDesk_backend

./: .gitignore  Dockerfile  Dockerfile_no_lambda  Jenkinsfile  Jenkinsfile.remote  Jenkinsfile_tejas_ai  alembic.ini  fastapi_run_app.sh  main.py  pyproject.toml  refined_jenkinsfile
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 7ec4073e0a9e_added_quantity_and_price_columns.py  8014a04cb23b_initial_migration.py  c18f1c649796_fixed_error.py
src/restaurant_review_system/authorization/: auth.py
src/restaurant_review_system/backend/: config.py  models.py
src/restaurant_review_system/repository/: order.py  restaurant.py  reviewer.py  signin.py
src/restaurant_review_system/router/: order.py  restaurant.py  reviewer.py  signin.py
src/restaurant_review_system/schemas/: login.py  orders.py  restaurant.py  reviews.py
src/restaurant_review_system/services/: orders.py  restaurant.py  reviewer.py  sigin.py
src/restaurant_review_system/utils/: response.py  validation.py
